# bdd-pytest-base-test

./: pyproject.toml
features/: Configuration.feature
tests/: test_all.py
tests/stepdefinitions/: __init__.py  test_pytest_bdd.py
